Changelog for Statocles

{{ $NEXT }}

0.084     2017-08-09 12:00:17-05:00 America/Chicago

    [Added]

    - The Store object now has a "files" method which gets the iterator
      over all the files in the store. This can then be easily
      overridden to get the list of files from another place: The
      configuration file, a manifest file, a database, or what-have-you.

      Thanks @djerius for the patch!

0.083     2017-01-31 16:44:17-06:00 America/Chicago

    [Added]

    - The new `statocles status` command shows you a quick status of
      your site, including the last time it was deployed and what date
      it was deployed up to (if different from the last date it was
      deployed). We will be adding more things to this later, so let us
      know if there are any statistics you'd like to know about your
      site! Thanks @perlancar [Github #516]

    - The `include` helper now accepts a `-raw` flag to disable the
      template renderer. This allows you to easily include Perl code and
      not have it mistaken for a template. Thanks justinQuiring on IRC
      for the bug report [Github #529]

      This isn't the end of this: We will likely fix the heuristics to
      ignore file types (extensions) that do not look like templates.
      This will be a breaking change, sorry.

0.082     2017-01-18 23:17:36-06:00 America/Chicago

    [Added]

    - The `highlight` plugin now accepts a `-style` option to override
      what stylesheet is used for the current highlighting block. This
      makes it easier for me to demonstrate the various highlighting
      stylesheets we have available in the documentation.

    - The new documentation is released on
      http://preaction.me/statocles/docs. They are not yet
      fully-complete, but they are a lot friendlier than the previous
      docs (which are at http://preaction.me/statocles/pod).

    [Fixed]

    - The `HTMLLint` plugin now appropriately adds the filename to every