@@ -2,6 +2,12 @@ Changelog for Statocles
 
 {{ $NEXT }}
 
+    [Added]
+
+    - Added the "dom" attribute to Statocles::Page. This caches the
+      parsed HTML for the multiple transformations that must be
+      performed. Hopefully this will speed up performance a little bit.
+
 0.084     2017-08-09 12:00:17-05:00 America/Chicago
 
     [Added]
